force-app/main/default/objects/Worker_Time__c/Worker_Time__c.object-meta.xml
<CustomObject>
    <label>Cleanslate Worker Time</label>
    <nameField>
        <displayFormat>WorkerTime - {00000}</displayFormat>
        <label>Worker Time #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cleanslate Worker Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>