force-app/main/default/objects/Worker_Time__c/fields/ADP_Hours_2__c.field-meta.xml
<CustomField>
    <fullName>ADP_Hours_2__c</fullName>
    <formula>(floor (ADP_Time_Out_2_Proxy__c) + (ADP_Time_Out_2_Proxy__c - floor (ADP_Time_Out_2_Proxy__c))/60*100) 

- 

(floor (ADP_Time_In_2_Proxy__c) + (ADP_Time_In_2_Proxy__c - floor (ADP_Time_In_2_Proxy__c))/60*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Hours (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>