force-app/main/default/objects/Worker_Time__c/fields/ADP_Time_In_1__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_1__c</fullName>
    <formula>if (isblank(Work_Log__r.Lunch_Start__c), Time_In__c,
if (Work_Log__r.Lunch_End_Proxy__c &lt;= Time_In_Proxy__c, Time_In__c,
if (Work_Log__r.Lunch_Start_Proxy__c &lt;= Time_In_Proxy__c, Work_Log__r.Lunch_End__c,
Time_In__c)))</formula>
    <label>ADP Time In (#1)</label>
    <type>Text</type>
</CustomField>