force-app/main/default/objects/Worker_Time__c/fields/ADP_Time_In_1_Proxy__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_1_Proxy__c</fullName>
    <label>ADP Time In (#1) Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>