force-app/main/default/objects/Worker_Time__c/fields/ADP_Time_In_2__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_In_2__c</fullName>
    <formula>if (isblank(Work_Log__r.Lunch_Start__c), &quot;No Lunch&quot;,
if (Work_Log__r.Lunch_Start_Proxy__c &gt;= Time_Out_Proxy__c 
|| Work_Log__r.Lunch_End_Proxy__c &gt;= Time_Out_Proxy__c
|| Work_Log__r.Lunch_Start_Proxy__c &lt;= Time_In_Proxy__c, &quot;Lunch Out of Range&quot;,
Work_Log__r.Lunch_End__c))</formula>
    <label>ADP Time In (#2)</label>
    <type>Text</type>
</CustomField>