force-app/main/default/objects/Worker_Time__c/fields/ADP_Time_Out_1__c.field-meta.xml
<CustomField>
    <fullName>ADP_Time_Out_1__c</fullName>
    <formula>if (isblank(Work_Log__r.Lunch_Start__c) 
|| Work_Log__r.Lunch_End_Proxy__c &lt;= Time_In_Proxy__c
|| Work_Log__r.Lunch_Start_Proxy__c &lt;= Time_In_Proxy__c, Time_Out__c,
if (Work_Log__r.Lunch_Start_Proxy__c &lt;= Time_Out_Proxy__c, Work_Log__r.Lunch_Start__c, 
Time_Out__c))</formula>
    <label>ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>