force-app/main/default/objects/Worker_Time__c/fields/ADP_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>ADP_Total_Hours__c</fullName>
    <formula>ADP_Hours_1__c +  ADP_Hours_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADP Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>