force-app/main/default/objects/Worker_Time__c/fields/Crew_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Crew_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crew Supervisor</label>
    <type>Checkbox</type>
</CustomField>