force-app/main/default/objects/Worker_Time__c/fields/Customer_from_Work_Log__c.field-meta.xml
<CustomField>
    <fullName>Customer_from_Work_Log__c</fullName>
    <formula>Work_Log__r.Organization__r.Name</formula>
    <label>Customer from Work Log</label>
    <type>Text</type>
</CustomField>