force-app/main/default/objects/Worker_Time__c/fields/Days_Since_Program_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Program_Start_Day__c</fullName>
    <formula>Work_Date__c - Worker__r.Case_Record__r.Program_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Since Program Start Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>