force-app/main/default/objects/Worker_Time__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <formula>if (not (isblank (Worker__c)),  Worker__r.Case_Record__r.Main_Client__r.ADP_File_Number__c ,  &quot;N/A, Staff Time&quot;)</formula>
    <inlineHelpText>ADP</inlineHelpText>
    <label>File Number</label>
    <type>Text</type>
</CustomField>