force-app/main/default/objects/Worker_Time__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>if (not (isblank (Worker__c)), Worker__r.Case_Record__r.First_Name__c, Staff__r.FirstName)</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>