force-app/main/default/objects/Worker_Time__c/fields/Inactive_Check__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Check__c</fullName>
    <formula>if ( Work_Date__c &gt; Worker__r.End_Date__c, &quot;Error Check&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Check</label>
    <type>Text</type>
</CustomField>