force-app/main/default/objects/Worker_Time__c/fields/Intern_Total_Wages__c.field-meta.xml
<CustomField>
    <fullName>Intern_Total_Wages__c</fullName>
    <description>ADP Total Hours X Latest Wage</description>
    <formula>ADP_Total_Hours__c *  Worker__r.Latest_Wage_TCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ADP Total Hours X Latest Wage</inlineHelpText>
    <label>Worker Total Wages (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>