force-app/main/default/objects/Worker_Time__c/fields/Last_Edited_from_Process_Builder__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited_from_Process_Builder__c</fullName>
    <label>Last Edited from Process Builder</label>
    <type>DateTime</type>
</CustomField>