force-app/main/default/objects/Worker_Time__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>if (not (isblank (Worker__c)), Worker__r.Case_Record__r.Last_Name__c,  Staff__r.LastName)</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>