force-app/main/default/objects/Worker_Time__c/fields/Organization_Customer__c.field-meta.xml
<CustomField>
    <fullName>Organization_Customer__c</fullName>
    <formula>Work_Log__r.Organization__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization (Customer)</label>
    <type>Text</type>
</CustomField>