force-app/main/default/objects/Worker_Time__c/fields/Overlap_Do_Not_Upload__c.field-meta.xml
<CustomField>
    <fullName>Overlap_Do_Not_Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlap, Do Not Upload</label>
    <type>Checkbox</type>
</CustomField>