force-app/main/default/objects/Worker_Time__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Contact.npsp__Primary_Affiliation__c</field>
            <operation>equals</operation>
            <value>001i000000K8MVQ</value>
        </filterItems>
        <filterItems>
            <field>Contact.Id</field>
            <operation>notEqual</operation>
            <value>0033100002w6AZB</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00ei0000001FFFf</value>
        </filterItems>
        <filterItems>
            <field>$User.Id</field>
            <operation>equals</operation>
            <value>00531000007bZ8D, 005i0000006b17D</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cleanslate Worker Time</relationshipLabel>
    <relationshipName>Worker_Time</relationshipName>
    <type>Lookup</type>
</CustomField>