force-app/main/default/objects/Worker_Time__c/fields/Staff_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Staff_Picklist__c</fullName>
    <label>Staff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>August Mangun</fullName>
            </value>
            <value>
                <fullName>Clemente Urrutia</fullName>
            </value>
            <value>
                <fullName>Darnell Pendleton</fullName>
            </value>
            <value>
                <fullName>David Atkinson</fullName>
            </value>
            <value>
                <fullName>Dennis Rodriguez</fullName>
            </value>
            <value>
                <fullName>Enrique Borges</fullName>
            </value>
            <value>
                <fullName>Ivan Campbell</fullName>
            </value>
            <value>
                <fullName>Jeremy Williams</fullName>
            </value>
            <value>
                <fullName>Juan Rodriguez</fullName>
            </value>
            <value>
                <fullName>LaBradford Martin</fullName>
            </value>
            <value>
                <fullName>Lisa Kidd</fullName>
            </value>
            <value>
                <fullName>Michael Bellino</fullName>
            </value>
            <value>
                <fullName>Michael Hurst</fullName>
            </value>
            <value>
                <fullName>Ron Holakovsky</fullName>
            </value>
            <value>
                <fullName>Rosetta Reeves</fullName>
            </value>
            <value>
                <fullName>Sam Lovett</fullName>
            </value>
            <value>
                <fullName>Tommy Wells</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>