force-app/main/default/objects/Worker_Time__c/fields/Staff_Total_Wage__c.field-meta.xml
<CustomField>
    <fullName>Staff_Total_Wage__c</fullName>
    <formula>Staff__r.Latest_Wage__c   *  ADP_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Total Wages (Formula)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>