force-app/main/default/objects/Worker_Time__c/fields/Time_In__c.field-meta.xml
<CustomField>
    <fullName>Time_In__c</fullName>
    <formula>if (not (isblank (Time_In_Override__c)), Time_In_Override__c,   Work_Log__r.Worker_Time_In__c)</formula>
    <label>Time In</label>
    <type>Text</type>
</CustomField>