force-app/main/default/objects/Worker_Time__c/fields/Time_In_Override__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Override__c</fullName>
    <inlineHelpText>If different than &apos;Arrival Time, Begin Work&apos;</inlineHelpText>
    <label>Time In Override</label>
    <length>8</length>
    <type>Text</type>
</CustomField>