force-app/main/default/objects/Worker_Time__c/fields/Time_In_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Proxy__c</fullName>
    <formula>if (contains (Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Time_In__c, &quot;12:&quot;), value(substitute(substitute(Time_In__c, &quot;12:&quot;, &quot;0.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Time_In__c, &quot;AM&quot;), value(substitute(substitute(Time_In__c, &quot;:&quot;, &quot;.&quot;), &quot; AM&quot;, NULL)), 

if (contains (Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Time_In__c, &quot;12:&quot;), value(substitute(substitute(Time_In__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL)), 

if (contains (Time_In__c, &quot;PM&quot;), value(substitute(substitute(Time_In__c, &quot;:&quot;, &quot;.&quot;), &quot; PM&quot;, NULL))+12, 

NULL))))</formula>
    <label>Time In Proxy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>