force-app/main/default/objects/Worker_Time__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <formula>if (not (isblank (Time_Out_Override__c)), Time_Out_Override__c,   Work_Log__r.Worker_Time_Out__c)</formula>
    <label>Time Out</label>
    <type>Text</type>
</CustomField>