force-app/main/default/objects/Worker_Time__c/fields/Time_Out_Override__c.field-meta.xml
<CustomField>
    <fullName>Time_Out_Override__c</fullName>
    <inlineHelpText>If different than &apos;Departure Time, Site Completed&apos;</inlineHelpText>
    <label>Time Out Override</label>
    <length>8</length>
    <type>Text</type>
</CustomField>