force-app/main/default/objects/Worker_Time__c/fields/Total_Staff_Wage__c.field-meta.xml
<CustomField>
    <fullName>Total_Staff_Wage__c</fullName>
    <label>Staff Total Wages (Copy)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>