force-app/main/default/objects/Worker_Time__c/fields/Total_Wage_Intern__c.field-meta.xml
<CustomField>
    <fullName>Total_Wage_Intern__c</fullName>
    <label>Worker Total Wages (Copy)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>