force-app/main/default/objects/Worker_Time__c/fields/Travel_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Travel_Time_Out__c</fullName>
    <formula>if (Work_Log__r.Departure_Time_Begin_Transport_Proxy__c &lt;= Time_In_Proxy__c,  Work_Log__r.Arrival_Time_Begin_Work__c , NULL)</formula>
    <label>Travel Time Out</label>
    <type>Text</type>
</CustomField>