force-app/main/default/objects/Worker_Time__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <formula>Work_Log__r.Work_Date__c</formula>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>