force-app/main/default/objects/Worker_Time__c/fields/Work_Log__c.field-meta.xml
<CustomField>
    <fullName>Work_Log__c</fullName>
    <label>Work Log</label>
    <referenceTo>Work_Log__c</referenceTo>
    <relationshipName>Worker_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>