force-app/main/default/objects/Worker_Time__c/fields/Worker__c.field-meta.xml
<CustomField>
    <fullName>Worker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Worker</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND (3 OR 4)) OR 5</booleanFilter>
        <filterItems>
            <field>Placement__c.Organization_Summary__c</field>
            <operation>equals</operation>
            <value>Cleanslate Chicago</value>
        </filterItems>
        <filterItems>
            <field>Placement__c.Job_Type__c</field>
            <operation>equals</operation>
            <value>Temporary, Internship, External Transitional, Long-Term, Short-Term</value>
        </filterItems>
        <filterItems>
            <field>Placement__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Placement__c.End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Placement__c.Date_Two_Weeks_Ago__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Id</field>
            <operation>equals</operation>
            <value>00ei0000001FFFf</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Cleanslate Worker Time</relationshipLabel>
    <relationshipName>Worker_Time</relationshipName>
    <type>Lookup</type>
</CustomField>