force-app/main/default/objects/Worker_Time__c/fields/Worker_Count__c.field-meta.xml
<CustomField>
    <fullName>Worker_Count__c</fullName>
    <formula>1</formula>
    <label>Worker Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>