force-app/main/default/objects/Worker_Time__c/fields/Worker_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Worker_Full_Name__c</fullName>
    <formula>Last_Name__c &amp;&quot;, &quot;&amp; First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Full Name</label>
    <type>Text</type>
</CustomField>