force-app/main/default/objects/Worker_Time__c/fields/Worker_Time_Update__c.field-meta.xml
<CustomField>
    <fullName>Worker_Time_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worker Time Update</label>
    <type>Checkbox</type>
</CustomField>