force-app/main/default/objects/Worker_Time__c/fields/Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Worker_Type__c</fullName>
    <formula>if (RecordTypeId = &quot;012310000011sUe&quot;, &quot;Intern&quot;, 
if (RecordTypeId = &quot;012310000011sUj&quot;, &quot;Staff&quot;,
NULL))</formula>
    <label>Worker Type</label>
    <type>Text</type>
</CustomField>