force-app/main/default/objects/Worker_Time__c/recordTypes/Cleanslate_Intern_Time.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Intern_Time</fullName>
    <active>true</active>
    <label>Cleanslate Intern Time</label>
</RecordType>