force-app/main/default/objects/Worker_Time__c/recordTypes/Cleanslate_Staff_Time.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Staff_Time</fullName>
    <active>true</active>
    <label>Cleanslate Staff Time</label>
</RecordType>