force-app/main/default/objects/Worker_Time__c/recordTypes/Emerson_Intern_Time.recordType-meta.xml
<RecordType>
    <fullName>Emerson_Intern_Time</fullName>
    <active>false</active>
    <label>Emerson Intern Time</label>
</RecordType>