force-app/main/default/objects/Worker_Time__c/validationRules/Reviewed_and_Approved_Work_Log_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Reviewed_and_Approved_Work_Log_Locked</fullName>
    <active>true</active>
    <errorConditionFormula>Work_Log__r.Reviewed_Approved__c &amp;&amp; not($User.Work_Log_Approver__c)</errorConditionFormula>
    <errorMessage>Work log has been reviewed and approved and can only be edited by Alison Benes, Andrea Cote, or Julie Chiu.</errorMessage>
</ValidationRule>