force-app/main/default/objects/Worker_Time__c/validationRules/Time_In.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_In</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Time_In_Override__c, &quot;[0]?[0-9]:[0-5][0-9] [A|P]M&quot;)) 

&amp;&amp; NOT(REGEX(Time_In_Override__c, &quot;[1]?[0-2]:[0-5][0-9] [A|P]M&quot;)) 

&amp;&amp; NOT (isblank (Time_In_Override__c))</errorConditionFormula>
    <errorDisplayField>Time_In_Override__c</errorDisplayField>
    <errorMessage>Enter time in format hh:mm AM/PM.</errorMessage>
</ValidationRule>