force-app/main/default/objects/Worker_Time__c/validationRules/Time_Out_Sequence.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Out_Sequence</fullName>
    <active>true</active>
    <errorConditionFormula>if (contains(Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Time_Out__c, &quot;PM&quot;), FALSE, 

if (contains(Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Time_Out__c, &quot;AM&quot;), TRUE, 

if (contains(Time_In__c, &quot;12:&quot;) &amp;&amp; not(contains (Time_Out__c, &quot;12:&quot;)), FALSE, 

if (contains(Time_In__c, &quot;AM&quot;) &amp;&amp; contains (Time_Out__c, &quot;AM&quot;) &amp;&amp; value(substitute(substitute(Time_Out__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Time_In__c, &quot; AM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

if (contains(Time_In__c, &quot;PM&quot;) &amp;&amp; contains (Time_Out__c, &quot;PM&quot;) &amp;&amp; value(substitute(substitute(Time_Out__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))-value(substitute(substitute(Time_In__c, &quot; PM&quot;, NULL), &quot;:&quot;, &quot;.&quot;))&gt;=0, FALSE, 

TRUE)))))</errorConditionFormula>
    <errorMessage>&apos;Time Out&apos; should be after &apos;Time In&apos;</errorMessage>
</ValidationRule>