force-app/main/default/objects/Worker_Time__c/listViews/Cleanslate_Worker_Error_Log.listView-meta.xml
<ListView>
    <fullName>Cleanslate_Worker_Error_Log</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>NAME</columns>
    <columns>Worker__c</columns>
    <columns>Work_Date__c</columns>
    <columns>Time_In__c</columns>
    <columns>Time_Out__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Worker_Time__c.Cleanslate_Intern_Time</value>
    </filters>
    <filters>
        <field>Work_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2023</value>
    </filters>
    <filters>
        <field>Worker__c</field>
        <operation>contains</operation>
        <value>Kason</value>
    </filters>
    <label>Cleanslate Worker Errors</label>
    <sharedTo>
        <role>Ecm_System_Admin</role>
    </sharedTo>
</ListView>